--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=9090
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?characterEncoding=utf8
-spring.datasource.username=myDB
+spring.datasource.url=jdbc:mysql://127.0.0.1:3307/mydb?characterEncoding=utf8
+spring.datasource.username=root
 spring.datasource.password=1234
 
 
